--- a/css/styles.css
+++ b/css/styles.css
@@ -77,10 +77,7 @@ body {
     padding-top: 94px;
 }
 
-.page-header {
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
+.page-header {  
     border-bottom: 1px solid var(--border-header-color);
 }
 
@@ -130,6 +127,7 @@ body {
     text-align: left;
     text-decoration: none;
     position: relative;
+    transition:  color var(--transition-dur-and-func);
 }
 
 .link-navigation.current::after {
@@ -148,7 +146,8 @@ body {
 }
 
 .link-connection {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     color: var(--primary-text-color);
     fill: currentColor;
     font-size: 14px;
@@ -159,6 +158,7 @@ body {
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition:  color var(--transition-dur-and-func);   
 }
 
 .icon-mail {
@@ -204,12 +204,7 @@ body {
 .list-connection {
     display: flex;
     align-items: center;
-    margin-right: 48px;
-    transition: color var(--transition-dur-and-func);
-}
-
-.list-navigation {
-    transition: color var(--transition-dur-and-func)
+    margin-right: 48px;   
 }
 
 .current {
@@ -261,14 +256,11 @@ body {
 }
 
 .section-order {
-    display: block;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;       
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
-    background-size: cover;
+    background-size: cover;    
     background-color: var(--section-order-background-color)
 }
 
@@ -467,8 +459,7 @@ body {
 .social-link-instagram:hover .icon-instagram,
 .social-link-twitter:hover .icon-twitter,
 .social-link-facebook:hover .icon-facebook,
-.social-link-linkedin:hover .icon-linkedin {
-    background-color: var(--active-color);
+.social-link-linkedin:hover .icon-linkedin {    
     fill: var(--accent-text-color);
 }
 
@@ -523,9 +514,9 @@ body {
     align-items: center;
     color: var(--clients-logo-color);
     border: 1px solid var(--clients-logo-color);
+    border-radius: 4px;
     width: 170px;
-    height: 92px;
-    padding: 16px, 32px;
+    height: 92px;    
     transition: color var(--transition-dur-and-func), border var(--transition-dur-and-func);
 }
 
@@ -552,9 +543,6 @@ body {
 }
 
 .page-footer {
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -612,6 +600,7 @@ body {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-align: left;
+    text-transform: uppercase;
     color: var(--accent-text-color);
     margin-bottom: 20px;
 }
@@ -644,8 +633,7 @@ body {
 .footer-social-links:hover .icon-instagram-footer,
 .footer-social-links:hover .icon-twitter-footer,
 .footer-social-links:hover .icon-facebook-footer,
-.footer-social-links:hover .icon-linkedin-footer {
-    background-color: var(--active-color);
+.footer-social-links:hover .icon-linkedin-footer {    
     fill: var(--accent-text-color);
 }
 
@@ -835,10 +823,7 @@ body {
 }
 
 .portfolio-footer {
-    display: block;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;    
     padding-top: 60px;
     padding-bottom: 60px;
 }
